--- a/API/package.json
+++ b/API/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "method-override": "^3.0.0",
     "mysql2": "^3.14.1",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.0"
   }
 }
